[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kmapper-iscc-scan"
version = "0.1.1"
description = "Workspace-based ISCC content inventory and similarity clustering tool"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "iscc-sdk>=0.8.6",
    "iscc-core>=1.3.0",
]

[project.scripts]
kmapper-iscc-scan = "kmapper_iscc_scan.kmapper_iscc_scan:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kmapper_iscc_scan"]
